--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "@parcel/transformer-sass": "^2.6.0",
     "parcel": "^2.6.0",
     "parcel-reporter-clean-dist": "^1.0.4",
-    "posthtml-include": "^1.7.4"
+    "posthtml-include": "^1.7.4",
+    "prettier": "2.7.1"
   },
   "browserslist": "> 0.5%, last 2 versions, not dead"
 }
